--- a/front/package.json
+++ b/front/package.json
@@ -10,6 +10,7 @@
     "apis": "bun api/generate-api.js"
   },
   "dependencies": {
+    "@material/material-color-utilities": "^0.3.0",
     "@vavt/v3-extension": "^1.3.0",
     "actify": "^0.2.8",
     "fs-extra": "^11.2.0",
