--- a/front/package.json
+++ b/front/package.json
@@ -10,9 +10,9 @@
     "apis": "bun api/generate-api.js"
   },
   "dependencies": {
-    "@material/material-color-utilities": "^0.3.0",
     "@vavt/v3-extension": "^1.3.0",
     "actify": "^0.2.8",
+    "framer-motion": "^11.11.9",
     "fs-extra": "^11.2.0",
     "md-editor-rt": "^4.21.0",
     "next": "14.2.15",
