:sparkles: (note-manager) add api for update and delete notes

--- a/front/tsconfig.json
+++ b/front/tsconfig.json
@@ -28,7 +28,8 @@
     ".next/types/**/*.ts",
     "components/Sidebar.tsx",
     "stores/status/DarkModeStats.js",
-    "stores/status/SideBarOptionState.ts"
+    "stores/status/SideBarOptionState.ts",
+    "app/demo/page.jsx"
   ],
   "exclude": ["node_modules"]
 }
