--- a/front/package.json
+++ b/front/package.json
@@ -18,6 +18,7 @@
     "next": "14.2.15",
     "next-themes": "^0.3.0",
     "react": "^18",
+    "react-contexify": "^6.0.0",
     "react-dom": "^18",
     "zustand": "^5.0.0"
   },
